--- a/css/index.css
+++ b/css/index.css
@@ -390,6 +390,38 @@ body {
   font-size: 3.5rem;
 }
 
+/* 멤버카드 애니메이션 섹션 css*/
+.back-to-position {
+  opacity: 0;
+  transition-duration: 1s;
+}
+
+.back-to-position.to-left {
+  transform: translateX(150px);
+}
+
+.back-to-position.to-right {
+  transform: translateX(-150px);
+}
+
+.show .back-to-position {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.show .back-to-position.delay-1 {
+  transition-delay: 0.3s;
+}
+.show .back-to-position.delay-2 {
+  transition-delay: 0.6s;
+}
+.show .back-to-position.delay-3 {
+  transition-delay: 0.9s;
+}
+.show .back-to-position.delay-4 {
+  transition-delay: 1.2s;
+}
+
 /* 좋아요 섹션 css*/
 
 .member-section__likes {
